feat: user authentication
