# api_gateway/internal/domain/user_models.go
@@ -8,18 +8,3 @@ type User struct {
 	UserName          string    `json:"user_name"`
 	CreatingTimestamp time.Time `json:"creating_timestamp"`
 }
-
-type RegisterRequest struct {
-	UserName string `json:"username"`
-	Email    string `json:"email"`
-	Password string `json:"password"`
-}
-
-type LoginRequest struct {
-	UserName string `json:"username"`
-	Password string `json:"password"`
-}
-
-type LoginResponse struct {
-	AccessToken string `json:"access_token"`
-}
