# auth_service/internal/grpc/users/server.go
@@ -3,6 +3,7 @@ package users
 import (
 	"context"
 	"errors"
+	"fmt"
 
 	"git.wolkodaf2946.ru/Wolkodaf/microservices_prac/auth_service/internal/domain"
 	"git.wolkodaf2946.ru/Wolkodaf/microservices_prac/auth_service/internal/services"
@@ -18,7 +19,8 @@ type UsersServer struct {
 }
 
 type AuthServer interface {
-	Register(ctx context.Context, in *pb.RegisterRequest) (*pb.RegisterResponse, error) 
+	Register(ctx context.Context, in *pb.RegisterRequest) (*pb.RegisterResponse, error)
+	Login(ctx context.Context, in *pb.LoginRequest) (*pb.LoginResponse, error)
 }
 
 func Registered(gRPCServer *grpc.Server, Service services.UserOperations) {
@@ -27,19 +29,38 @@ func Registered(gRPCServer *grpc.Server, Service services.UserOperations) {
 
 func (u *UsersServer) Register(ctx context.Context, in *pb.RegisterRequest) (*pb.RegisterResponse, error) {
 	if in.Username == "" || in.Email == "" || in.Password == "" {
-        return nil, status.Error(codes.InvalidArgument, "all fields are required")
-    }
+		return nil, status.Error(codes.InvalidArgument, "all fields are required")
+	}
 
-	id, err := u.services.CreateUser(in.Username, in.Email, in.Password)
+	id, err := u.services.CreateUser(ctx, in.Username, in.Email, in.Password)
 	if err != nil {
 		if errors.Is(err, domain.ErrUserExists) {
-            return nil, status.Error(codes.AlreadyExists, "user already exists")
-        }
-        return nil, status.Error(codes.Internal, "failed to create user")
-   	}
-
+			return nil, status.Error(codes.AlreadyExists, "user already exists")
+		}
+		return nil, status.Error(codes.Internal, "failed to create user")
+	}
 
 	return &pb.RegisterResponse{
-        UserId: id,
-    }, nil
+		UserId: id,
+	}, nil
+}
+
+func (u *UsersServer) Login(ctx context.Context, in *pb.LoginRequest) (*pb.LoginResponse, error) {
+	if in.Email == "" || in.Password == "" {
+		return nil, status.Error(codes.InvalidArgument, "all fields are required")
+	}
+	_, tokens, err := u.services.GenerateTokens(ctx, in.Email, in.Password)
+	if err != nil {
+		fmt.Println(err)
+		if errors.Is(err, domain.ErrInsertToken) || errors.Is(err, domain.ErrInvalidToken) || errors.Is(err, domain.ErrTokenNotFound) {
+			return nil, status.Error(codes.Internal, err.Error())
+		} else if errors.Is(err, domain.ErrUserNotFound) {
+			return nil, status.Error(codes.InvalidArgument, err.Error())
+		}
+		return nil, status.Error(codes.Internal, "unexpected error")
+	}
+	return &pb.LoginResponse{
+		AccessToken:  tokens.AccessToken,
+		RefreshToken: tokens.RefreshToken,
+	}, nil
 }
