# auth_service/pkg/token-manager/models.go
@@ -1,0 +1,8 @@
+package tokenmanager
+
+import "time"
+
+type Session struct {
+	RefreshToken string
+	ExpiresAt    time.Time
+}
